Fix homepage positioning for endorsement alignment

--- a/index.html
+++ b/index.html
@@ -799,8 +799,8 @@
                     <li><a href="#how-it-works">How It Works</a></li>
                 </ul>
                 <div class="nav-cta">
-                    <a href="app.html" class="btn btn-secondary">Log In</a>
-                    <a href="app.html" class="btn btn-primary">Get Started</a>
+                    <a href="product-template.html" class="btn btn-secondary">View Framework</a>
+                    <a href="demo-product.html" class="btn btn-primary">See Demo Report</a>
                 </div>
             </nav>
             <button class="mobile-toggle" aria-label="Menu">
@@ -814,7 +814,7 @@
     <!-- MVP Status Banner -->
     <div class="mvp-banner" style="margin-top: 72px;">
         <div class="container">
-            <p>📋 <strong>MVP Proof-of-Concept</strong> — This is a static demonstration of the Product Intelligence decision framework. <a href="product-template.html">Learn more about the structure →</a></p>
+            <p>📋 <strong>MVP Proof-of-Concept</strong> — This is a static demonstration of the Product Intelligence decision framework. No automation, AI processing, or live data is currently active. <a href="product-template.html">Learn more →</a></p>
         </div>
     </div>
 
@@ -930,7 +930,7 @@
                     <div class="journey-step-number">4</div>
                     <div class="journey-step-content">
                         <h4>Intelligence Report</h4>
-                        <p>Generate a clear, auditable report</p>
+                        <p>Review a clear, structured report</p>
                     </div>
                 </div>
                 <div class="journey-step">
@@ -1005,33 +1005,30 @@
                         <div class="logo-icon">PI</div>
                         Product Intelligence
                     </div>
-                    <p>Making product research effortless for businesses worldwide. Get the insights you need, when you need them.</p>
+                    <p>A structured decision framework for understanding products before buying, selling, or sourcing. Currently in MVP demonstration phase.</p>
                 </div>
                 <div class="footer-links">
                     <div class="footer-column">
-                        <h4>Product</h4>
+                        <h4>Framework</h4>
                         <ul>
-                            <li><a href="#">Features</a></li>
-                            <li><a href="#">Pricing</a></li>
+                            <li><a href="demo-product.html">Demo Report</a></li>
+                            <li><a href="product-template.html">Template Structure</a></li>
                             <li><a href="use-cases.html">Use Cases</a></li>
-                            <li><a href="#">Roadmap</a></li>
+                            <li><a href="modes.html">User Modes</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
-                        <h4>Company</h4>
+                        <h4>About</h4>
                         <ul>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Careers</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="why-not-ai.html">Why Not AI/Search</a></li>
+                            <li><a href="monetisation.html">Revenue Model</a></li>
                         </ul>
                     </div>
                     <div class="footer-column">
-                        <h4>Legal</h4>
+                        <h4>Status</h4>
                         <ul>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms of Service</a></li>
-                            <li><a href="#">Cookie Policy</a></li>
+                            <li><span style="color: rgba(255,255,255,0.5);">MVP Phase</span></li>
+                            <li><span style="color: rgba(255,255,255,0.5);">Static Demo</span></li>
                         </ul>
                     </div>
                 </div>
