Add Early Access Pilot and validation CTA

--- a/index.html
+++ b/index.html
@@ -428,6 +428,86 @@
             margin: 0 auto;
         }
 
+        /* Early Access Pilot */
+        .pilot-section {
+            padding: 100px 0;
+            background: var(--background);
+        }
+
+        .pilot-box {
+            background: white;
+            border: 2px solid var(--primary);
+            border-radius: var(--radius);
+            padding: 60px 48px;
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+            box-shadow: 0 4px 12px rgba(37, 99, 235, 0.08);
+        }
+
+        .pilot-box h2 {
+            font-size: clamp(28px, 3.5vw, 36px);
+            font-weight: 700;
+            margin-bottom: 20px;
+            letter-spacing: -0.02em;
+            color: var(--text-primary);
+        }
+
+        .pilot-box p {
+            font-size: 17px;
+            color: var(--text-secondary);
+            line-height: 1.7;
+            margin-bottom: 24px;
+        }
+
+        .pilot-list {
+            list-style: none;
+            text-align: left;
+            max-width: 600px;
+            margin: 0 auto 32px;
+        }
+
+        .pilot-list li {
+            position: relative;
+            padding-left: 28px;
+            margin-bottom: 12px;
+            color: var(--text-secondary);
+            font-size: 16px;
+            line-height: 1.6;
+        }
+
+        .pilot-list li::before {
+            content: '•';
+            position: absolute;
+            left: 0;
+            color: var(--primary);
+            font-size: 24px;
+            line-height: 1;
+            font-weight: 700;
+        }
+
+        .pilot-box .btn-primary {
+            padding: 16px 40px;
+            font-size: 16px;
+            border-radius: 50px;
+            box-shadow: 0 4px 14px rgba(37, 99, 235, 0.25);
+        }
+
+        .pilot-box .btn-primary:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(37, 99, 235, 0.35);
+        }
+
+        @media (max-width: 768px) {
+            .pilot-box {
+                padding: 48px 32px;
+            }
+
+            .pilot-list {
+                max-width: 100%;
+            }
+        }
+
         /* Final CTA */
         .cta-section {
             padding: 120px 0;
@@ -983,6 +1063,27 @@
                 <a href="why-not-ai.html" style="color: #4b5563; font-size: 15px; text-decoration: none; border-bottom: 1px solid #d1d5db;">Why Not Just Use Search or AI? →</a>
             </p>
         </div>
+    </section>
+
+    <!-- Early Access Pilot -->
+    <section class="pilot-section">
+        <div class="container">
+            <div class="pilot-box">
+                <h2>Early Access Pilot – UK</h2>
+                <p><strong>Status: Early Access Pilot currently onboarding UK users</strong></p>
+                <p>We are onboarding early users to trial Product Intelligence – a structured, decision-ready product evaluation framework.</p>
+                <p style="margin-bottom: 20px;"><strong>This pilot is for:</strong></p>
+                <ul class="pilot-list">
+                    <li>Individuals making important product decisions</li>
+                    <li>SME sellers and e-commerce operators</li>
+                    <li>Small businesses evaluating products before purchase</li>
+                </ul>
+                <p>Product Intelligence is built on a fixed, reusable decision framework designed for future automation.</p>
+                <p>Join the pilot to help shape the future of structured Product Intelligence.</p>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdDmWC8ZcaBcDlOpGR52KUW8C9nkYsQlLJJa0YlhWxnWZBaAw/viewform" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Join the Pilot</a>
+            </div>
+        </div>
+        <p style="text-align: center; margin-top: 24px; font-size: 14px; color: var(--text-secondary);">Business and SME pilot enquiries are also being accepted as part of early validation.</p>
     </section>
 
     <!-- Final CTA -->
