--- a/use-cases.html
+++ b/use-cases.html
@@ -422,8 +422,8 @@
                     <li><a href="index.html#how-it-works">How It Works</a></li>
                 </ul>
                 <div class="nav-cta">
-                    <a href="app.html" class="btn btn-secondary">Log In</a>
-                    <a href="app.html" class="btn btn-primary">Get Started</a>
+                    <a href="product-template.html" class="btn btn-secondary">View Framework</a>
+                    <a href="demo-product.html" class="btn btn-primary">See Demo Report</a>
                 </div>
             </nav>
             <button class="mobile-toggle" aria-label="Menu">
