chore: refine pilot, homepage and use-cases

--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@
             <nav class="nav">
                 <ul class="nav-links">
                     <li><a href="use-cases.html">Use Cases</a></li>
-                    <li><a href="#values">Why Us</a></li>
+                    <li><a href="why-not-ai.html">Why Us</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="b2b-pilot.html">B2B Pilot</a></li>
                 </ul>
