--- a/b2b-pilot.html
+++ b/b2b-pilot.html
@@ -454,7 +454,7 @@
             <nav class="nav">
                 <ul class="nav-links">
                     <li><a href="use-cases.html">Use Cases</a></li>
-                    <li><a href="index.html#values">Why Us</a></li>
+                    <li><a href="why-not-ai.html">Why Us</a></li>
                     <li><a href="index.html#how-it-works">How It Works</a></li>
                 </ul>
                 <div class="nav-cta">
