--- a/use-cases.html
+++ b/use-cases.html
@@ -418,7 +418,7 @@
             <nav class="nav">
                 <ul class="nav-links">
                     <li><a href="use-cases.html" class="active">Use Cases</a></li>
-                    <li><a href="index.html#values">Why Us</a></li>
+                    <li><a href="why-not-ai.html">Why Us</a></li>
                     <li><a href="index.html#how-it-works">How It Works</a></li>
                 </ul>
                 <div class="nav-cta">
